// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 5`] = `
Array [
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with CommandError 6`] = `
Object {
  "body": "Command error: ",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 400,
}
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 5`] = `
Array [
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with ConcurrentError 6`] = `
Object {
  "body": "Command error: Concurrency error",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 5`] = `
Array [
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should fail command via POST /"rootPath"/api/commands/ with Error 6`] = `
Object {
  "body": "Command error: ",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should fail on invoking read-model without "resolverName" via GET /"rootPath"/api/query/"readModelName" 6`] = `
Object {
  "body": "Invalid \\"modelName\\" and/or \\"modelOptions\\" parameters",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via GET /"rootPath"/api/subscribe/ 6`] = `
Object {
  "body": "TypeError: sts.assumeRole is not a function",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/my-api-handler-1/ 6`] = `
Object {
  "body": "ok",
  "headers": Object {},
  "statusCode": 200,
}
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should get subscribe options via POST /"rootPath"/api/subscribe/ 6`] = `
Object {
  "body": "TypeError: sts.assumeRole is not a function",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should handle URL-addresses outside "rootPath" 6`] = `
Object {
  "body": "Access error: path \\"/\\" is not addressable by current executor",
  "headers": Object {},
  "statusCode": 405,
}
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
  Array [
    "IotData publish",
    Object {
      "payload": "{\\"aggregateId\\":\\"aggregateId\\",\\"aggregateVersion\\":1,\\"timestamp\\":0,\\"type\\":\\"SET\\",\\"payload\\":{\\"key\\":\\"key1\\",\\"value\\":\\"value1\\"}}",
      "qos": 1,
      "topic": "undefined/SET/aggregateId",
    },
  ],
  Array [
    "IotData publish.promise",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 5`] = `
Array [
  Array [
    "SnapshotAdapter loadSnapshot",
    "aggregate-invariantHash;aggregateId",
  ],
  Array [
    "StorageAdapter loadEvents",
    Object {
      "aggregateIds": Array [
        "aggregateId",
      ],
      "startTime": -2,
    },
  ],
  Array [
    "StorageAdapter saveEvent",
    Object {
      "aggregateId": "aggregateId",
      "aggregateVersion": 1,
      "payload": Object {
        "key": "key1",
        "value": "value1",
      },
      "timestamp": 0,
      "type": "SET",
    },
  ],
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke command via POST /"rootPath"/api/commands/ 6`] = `
Object {
  "body": "{
  \\"aggregateId\\": \\"aggregateId\\",
  \\"aggregateVersion\\": 1,
  \\"timestamp\\": 0,
  \\"type\\": \\"SET\\",
  \\"payload\\": {
    \\"key\\": \\"key1\\",
    \\"value\\": \\"value1\\"
  }
}",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 200,
}
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
  Array [
    "StepFunctions startExecution",
    Object {
      "input": "{\\"detail-type\\":\\"LISTEN_EVENT_BUS\\",\\"listenerId\\":\\"read-model-name\\",\\"inactiveTimeout\\":3600000,\\"eventTypes\\":[]}",
      "name": "FEED-read-model-name-UUID",
      "stateMachineArn": undefined,
    },
  ],
  Array [
    "StepFunctions startExecution.promise",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "ReadModel \\"read-model-name\\" resolver \\"resolver-name\\" invoked with",
    null,
    "key=value",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 6`] = `
Object {
  "body": "\\"\\\\\\"key=value\\\\\\"\\"",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke existing read-model with non-existing resolver via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 6`] = `
Object {
  "body": "Resolver non-existing-resolver-name does not exist",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 500,
}
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should invoke non-existing read-model via GET /"rootPath"/api/query/"readModelName"/"resolverName"?"resolverArgs" 6`] = `
Object {
  "body": "Read/view model \\"non-existing-read-model-name\\" does not exist",
  "headers": Object {
    "Content-Type": "text/plain",
  },
  "statusCode": 422,
}
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on ErrorPage on /"rootPath"/non-existing-page 6`] = `
Object {
  "body": "<!doctype html><html ><head><link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/root-path/static-path/favicon.ico\\" /><title data-react-helmet=\\"true\\"></title><script>window.__INITIAL_STATE__={\\"router\\":{\\"location\\":{\\"pathname\\":\\"/non-existing-page\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"key\\":\\"4fzzzx\\"}},\\"viewModels\\":{\\"@@resolve/connectorMetaMap\\":{},\\"@@resolve/aggregateVersionsMap\\":{},\\"@@resolve/lastTimestampMap\\":{}},\\"readModels\\":{\\"@@resolve/connectorMetaMap\\":{}},\\"jwt\\":{}};window.__RESOLVE_RUNTIME_ENV__={\\"customConstants\\":{\\"customConstantName\\":\\"customConstantValue\\"},\\"staticPath\\":\\"static-path\\",\\"rootPath\\":\\"root-path\\"};</script></head><body ><div class=\\"app-container\\"><div>Error SSR page Match {&quot;path&quot;:&quot;/&quot;,&quot;url&quot;:&quot;/&quot;,&quot;isExact&quot;:false,&quot;params&quot;:{}}Location {&quot;pathname&quot;:&quot;/non-existing-page&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;}History {&quot;length&quot;:2,&quot;action&quot;:&quot;PUSH&quot;,&quot;location&quot;:{&quot;pathname&quot;:&quot;/non-existing-page&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;},&quot;index&quot;:1,&quot;entries&quot;:[{&quot;pathname&quot;:&quot;/&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;},{&quot;pathname&quot;:&quot;/non-existing-page&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;}]}StaticContext </div></div><script src=\\"/root-path/static-path/bundle.js\\"></script></body></html>",
  "headers": Object {
    "Content-Type": "text/html",
  },
  "statusCode": 200,
}
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should perform SSR on IndexPage on /"rootPath"/ 6`] = `
Object {
  "body": "<!doctype html><html ><head><link rel=\\"icon\\" type=\\"image/x-icon\\" href=\\"/root-path/static-path/favicon.ico\\" /><title data-react-helmet=\\"true\\"></title><script>window.__INITIAL_STATE__={\\"router\\":{\\"location\\":{\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"hash\\":\\"\\",\\"key\\":\\"4fzzzx\\"}},\\"viewModels\\":{\\"@@resolve/connectorMetaMap\\":{},\\"@@resolve/aggregateVersionsMap\\":{},\\"@@resolve/lastTimestampMap\\":{}},\\"readModels\\":{\\"@@resolve/connectorMetaMap\\":{}},\\"jwt\\":{}};window.__RESOLVE_RUNTIME_ENV__={\\"customConstants\\":{\\"customConstantName\\":\\"customConstantValue\\"},\\"staticPath\\":\\"static-path\\",\\"rootPath\\":\\"root-path\\"};</script></head><body ><div class=\\"app-container\\"><div>Index SSR page Match {&quot;path&quot;:&quot;/&quot;,&quot;url&quot;:&quot;/&quot;,&quot;isExact&quot;:true,&quot;params&quot;:{}}Location {&quot;pathname&quot;:&quot;/&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;}History {&quot;length&quot;:2,&quot;action&quot;:&quot;PUSH&quot;,&quot;location&quot;:{&quot;pathname&quot;:&quot;/&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;},&quot;index&quot;:1,&quot;entries&quot;:[{&quot;pathname&quot;:&quot;/&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;},{&quot;pathname&quot;:&quot;/&quot;,&quot;search&quot;:&quot;&quot;,&quot;hash&quot;:&quot;&quot;,&quot;key&quot;:&quot;4fzzzx&quot;}]}StaticContext </div></div><script src=\\"/root-path/static-path/bundle.js\\"></script></body></html>",
  "headers": Object {
    "Content-Type": "text/html",
  },
  "statusCode": 200,
}
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should redirect from /"rootPath" to /"rootPath"/ 6`] = `
Object {
  "body": "",
  "headers": Object {
    "Location": "/root-path/",
  },
  "statusCode": 302,
}
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 1`] = `
Array [
  Array [
    "IotData constructor",
    Object {
      "endpoint": undefined,
    },
  ],
]
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 2`] = `
Array [
  Array [
    "Lambda constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 3`] = `
Array [
  Array [
    "StepFunctions constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 4`] = `
Array [
  Array [
    "STS constructor",
  ],
]
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 5`] = `
Array [
  Array [
    "DefaultReadModelConnector connect",
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    null,
    "read-model-name",
  ],
  Array [
    "DefaultReadModelConnector disconnect",
    undefined,
    undefined,
  ],
  Array [
    "DefaultReadModelConnector dispose",
  ],
]
`;

exports[`Cloud entry API gateway event should set header Bearer when jwt provided 6`] = `
Object {
  "body": "",
  "headers": Object {
    "Authorization": "Bearer JWT",
    "Location": "/root-path/",
  },
  "statusCode": 302,
}
`;
